--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,7 @@ development:
   encoding: unicode
   database: property_management_development
   pool: 5
-  username: property_management
+  username:
   password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -48,7 +48,7 @@ test:
   encoding: unicode
   database: property_management_test
   pool: 5
-  username: property_management
+  username:
   password:
 
 production:
